<resources>
    <string name="app_name">BMICalculatorS003</string>
    <string name="tv_title">BMI計算</string>
    <string name="tv_age">年齢</string>
    <string name="tv_age2">歳</string>
    <string name="tv_height">身長</string>
    <string name="tv_cm">cm</string>
    <string name="tv_weight">体重</string>
    <string name="tv_kg">kg</string>
    <string name="bt_keisan">計算</string>
    <string name="bt_clear">クリア</string>
</resources>